# keel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/keel-cli/: Cargo.toml
crates/keel-cli/src/: commands.rs  main.rs  render.rs
crates/keel-cli/tests/: cli_workflow.rs
crates/keel-cli/tests/snapshots/: cli_workflow__report_redacted.snap  cli_workflow__status_no_matches.snap
crates/keel-core/: Cargo.toml
crates/keel-core/src/: agents.rs  checks.rs  command.rs  commit.rs  config.rs  constants.rs  doctor.rs  fsio.rs  git.rs  json.rs  ledger.rs  lib.rs  model.rs  next.rs  pr.rs  project.rs  publish.rs  push.rs  report.rs  risk.rs  run.rs  tests.rs  time.rs  workspace_check.rs
crates/keel-core/src/pr/: provider.rs
crates/keel-core/src/tests/: agents.rs  commit.rs  config.rs  next.rs  pr.rs  project.rs  push.rs  rerun_checks_risk.rs  review.rs  run_lifecycle.rs  workspace_check.rs
crates/keel-tui/: Cargo.toml
crates/keel-tui/src/: app.rs  lib.rs  terminal.rs  theme.rs  ui.rs
crates/keel-tui/src/snapshots/: keel_tui__app__tests__tui_artifact_groups.snap  keel_tui__app__tests__tui_colored_diff_review.snap  keel_tui__app__tests__tui_filtered_empty_state.snap  keel_tui__app__tests__tui_help_overlay.snap  keel_tui__app__tests__tui_narrow_review_layout.snap  keel_tui__app__tests__tui_not_ready_failure_summary.snap  keel_tui__app__tests__tui_read_only_review_layout.snap  keel_tui__app__tests__tui_scrolled_report_summary.snap
scripts/: real-codex-rerun-smoke.ps1  real-provider-pr-smoke.ps1
skills/keel/: SKILL.md
