[package]
name = "keel-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "keel"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
keel-core = { path = "../keel-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
insta = "1"
predicates = "3"
tempfile = "3"
