[package]
name = "keel-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
process-wrap = { version = "9.1.0", default-features = false, features = [
    "std",
    "process-group",
    "job-object",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["parsing"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
